--- a/styles/modules/XKCD.module.css
+++ b/styles/modules/XKCD.module.css
@@ -1,11 +1,10 @@
   .background {
     background-color:#96A8C8;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
+    position: relative;
+    min-height: 100vh;
+    min-width: 100vw;
   }
+
   .main {
     background-color:#ffffff;
     width: fit-content;
@@ -35,17 +34,20 @@
     font-size: 16px;
     font-weight: bold;
     margin: 0.5rem;
+    box-shadow: 1px 1px 1px #000000;
   }
   
   .buttons button:hover {
     background-color: #ffffff;
     color: #6E7B91;
+    box-shadow: none;
     transition: 0.5s;
   }
 
   .buttons button:disabled {
     background-color: #9fa6b3;
     color: #ffffff;
+    box-shadow: 1px 1px 1px #000000;
   }
   
   .comic {
@@ -75,8 +77,30 @@
   .loading-spinner {
     width: 300px;
     height: 300px;
-    border: 20px solid #f3f3f3; /* Light grey */
-    border-top: 20px solid #383636; /* Black */
+    border: 20px solid #f3f3f3;
+    border-top: 20px solid #383636;
     border-radius: 50%;
     animation: spinner 1.5s linear infinite;
+  }
+
+  .search {
+    margin-top: 1rem;
+  }
+
+  .search label {
+    display: flex;
+    font-size: 24px;
+    justify-content: center;
+  }
+
+  .search input {
+    width: 12rem;
+    display: inline-block;
+    margin-left: 23%;
+    margin-right: 0.25rem;
+  }
+
+  .search button {
+    display: inline-block;
+    justify-content: center;
   }
