--- a/styles/modules/XKCD.module.css
+++ b/styles/modules/XKCD.module.css
@@ -1,106 +1,115 @@
-  .background {
-    background-color:#96A8C8;
-    position: relative;
-    min-height: 100vh;
-    min-width: 100vw;
-  }
+.background {
+  background-color:#96A8C8;
+  position: relative;
+  min-height: 100vh;
+  min-width: 100vw;
+}
 
-  .main {
-    background-color:#ffffff;
-    width: fit-content;
-    border-radius: 1rem;
-    margin: auto;
-    padding: 2rem 6rem;
-  }
-  
-  .title {
-    text-align: center;
-    font-weight: bold;
-    font-size: 36px;
-  }
+.button {
+  background-color: #6E7B91;
+  color: #ffffff;
+  border-radius: 4px;
+  border: 1px solid #000000;
+  padding: 4px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0.5rem;
+  box-shadow: 1px 1px 1px #000000;
+}
 
-  .buttons {
-    display: flex;
-    justify-content: center;
-    color: #ffffff;
-  }
-  
-  .button {
-    background-color: #6E7B91;
-    color: #ffffff;
-    border-radius: 4px;
-    border: 1px solid #000000;
-    padding: 4px 20px;
-    font-size: 16px;
-    font-weight: bold;
-    margin: 0.5rem;
-    box-shadow: 1px 1px 1px #000000;
-  }
-  
-  .buttons button:hover {
-    background-color: #ffffff;
-    color: #6E7B91;
-    box-shadow: none;
-    transition: 0.5s;
-  }
+.buttons {
+  display: flex;
+  justify-content: center;
+  color: #ffffff;
+}
 
-  .buttons button:disabled {
-    background-color: #9fa6b3;
-    color: #ffffff;
-    box-shadow: 1px 1px 1px #000000;
-  }
-  
-  .comic {
-    justify-content: center;
-    max-width: 100%;
-  }
-  
-  .comic img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  
-  .comic p {
-    text-align: center;
-  }
+.buttons button:hover {
+  background-color: #ffffff;
+  color: #6E7B91;
+  box-shadow: none;
+  transition: 0.5s;
+}
 
-  @keyframes spinner {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-  }
+.buttons button:disabled {
+  background-color: #9fa6b3;
+  color: #ffffff;
+  box-shadow: 1px 1px 1px #000000;
+}
 
-  .loading-spinner {
-    width: 300px;
-    height: 300px;
-    border: 20px solid #f3f3f3;
-    border-top: 20px solid #383636;
-    border-radius: 50%;
-    animation: spinner 1.5s linear infinite;
-  }
+.comic {
+  justify-content: center;
+  max-width: 100%;
+}
 
-  .search {
-    margin-top: 1rem;
-  }
+.comic img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 
-  .search label {
-    display: flex;
-    font-size: 24px;
-    justify-content: center;
-  }
+.comic p {
+  text-align: center;
+}
 
-  .search input {
-    width: 12rem;
-    display: inline-block;
-    margin-left: 23%;
-    margin-right: 0.25rem;
+@keyframes spinner {
+  0% {
+    transform: rotate(0deg);
   }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 
-  .search button {
-    display: inline-block;
-    justify-content: center;
-  }
+.main {
+  background-color:#ffffff;
+  width: fit-content;
+  border-radius: 1rem;
+  margin: auto;
+  padding: 2rem 6rem;
+}
+
+.title {
+  text-align: center;
+  font-weight: bold;
+  font-size: 36px;
+}
+
+.loading-spinner {
+  width: 300px;
+  height: 300px;
+  border: 20px solid #f3f3f3;
+  border-top: 20px solid #383636;
+  border-radius: 50%;
+  animation: spinner 1.5s linear infinite;
+}
+
+.search {
+  margin-top: 1rem;
+}
+
+.search label {
+  display: flex;
+  font-size: 24px;
+  justify-content: center;
+}
+
+.search input {
+  width: 12rem;
+  display: inline-block;
+  padding: none;
+}
+
+.search button:hover {
+  background-color: #ffffff;
+  color: #6E7B91;
+  box-shadow: none;
+  transition: 0.5s;
+}
+
+.search-controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+}
