--- a/styles/modules/XKCD.module.css
+++ b/styles/modules/XKCD.module.css
@@ -1,8 +1,8 @@
 .background {
   background-color:#96A8C8;
   position: relative;
-  min-height: 90vh;
-  min-width: 90vw;
+  min-height: 77vh; /* Empirically the correct height to keep white margin away */
+  min-width: auto;
 }
 
 .button {
@@ -64,7 +64,7 @@
   background-color:#ffffff;
   width: fit-content;
   border-radius: 1rem;
-  margin: auto;
+  margin: 3rem auto;
   padding: 2rem 6rem;
 }
 
