--- a/styles/modules/layout.module.css
+++ b/styles/modules/layout.module.css
@@ -4,11 +4,12 @@
 
 .footer {
   background-color:#96A8C8;
+  padding-bottom: 1rem;
 }
 
 .footer .row {
   justify-content: center;
-  margin: 1rem 1rem 0rem;
+  margin-top: 1rem;
 }
 
 .link {
