--- a/styles/modules/Home.module.css
+++ b/styles/modules/Home.module.css
@@ -40,14 +40,16 @@
 }
 
 .title {
-  margin: 0;
+  margin: 1rem 0rem;
   line-height: 1.15;
   font-size: 2rem;
+  text-decoration: underline;
 }
 
 .title,
 .description {
   text-align: center;
+  font-size: 2rem;
 }
 
 .description {
